Fixes alignement of textfields on the mainpage in firefox

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -207,11 +207,11 @@ footer {
 }
 
 .post-list, .publication-short-list {
-  -webkit-margin-before: 0em;
-  -webkit-margin-after: 0em;
-  -webkit-margin-start: 0px;
-  -webkit-margin-end: 0px;
-  -webkit-padding-start: 0px;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
 }
 
 .post-list p {
